# minibanter

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  pyproject.toml
app/: main.py  video_export.py
docs/: architecture.md
mobile/: BUILDING.md  README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/android/app/src/main/: AndroidManifest.xml
mobile/android/app/src/main/kotlin/com/minibanter/minibanter/: MainActivity.kt
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/lib/features/recording/: native_compositor_gateway.dart  overlay_timeline.dart  pigeon_native_compositor_gateway.dart  recording_controller.dart
mobile/lib/services/: baby_subtitles_api.dart
mobile/lib/widgets/: camera_preview_panel.dart
mobile/test/: baby_subtitles_api_test.dart  camera_preview_panel_test.dart  language_selection_test.dart  main_configuration_test.dart  native_recording_flow_test.dart  recording_error_test.dart  recording_session_flow_test.dart  regional_style_selection_test.dart  video_recording_flow_test.dart  widget_test.dart
mobile/test/features/recording/: overlay_timeline_test.dart  pigeon_native_compositor_gateway_test.dart  recording_controller_test.dart
mobile/test/support/: fake_camera_capture.dart
mobile/web/: index.html  manifest.json
tests/: test_api.py  test_cors.py  test_video_export.py
