[project]
name = "baby-subtitles"
version = "0.1.0"
description = "Entertainment-only fictional subtitles for baby videos"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110,<1.0",
  "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1.0",
  "pytest>=8.0,<10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
